# marsis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
notebook/: clutterFocus.ipynb  old_clutterFocus.ipynb  testOptmization.ipynb
src/marsis/: __init__.py  campbell.py  edr.py  fetch.py  mcmichael.py  output.py  parser.out  parsetab.py  plain.py  util.py
src/marsis/.ipynb_checkpoints/: fetch-checkpoint.py  mcmichael-checkpoint.py  plain-checkpoint.py  util-checkpoint.py
tests/: ignore_test_edr.py  refChirp.npy  refChirp_autocorr_20us_delay.npy  test_campbell.py  test_fetch.py  test_util.py
