[metadata]
name = marsis
version = 0.0.2
author = Michael Christoffersen
author_email = mchristo28@gmail.com
description = An open source processor for the MARSIS instrument on Mars Express
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mchristoffersen/marsis_processor
project_urls =
    Bug Tracker = https://github.com/mchristoffersen/marsis_processor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
scripts =
    bin/marsis_processor.py

[options.packages.find]
where = src
