[metadata]
name = marsis
version = 0.0.7
author = Michael Christoffersen
author_email = mchristo28@gmail.com
description = An open source processor for the MARSIS instrument on Mars Express
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mchristoffersen/marsis_processor
project_urls =
    Bug Tracker = https://github.com/mchristoffersen/marsis_processor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
scripts =
    bin/marsis_processor.py
    bin/marsis_download.py
install_requires =
    pandas
    numpy
    matplotlib
    rasterio
    ply
    pyproj
    tqdm
    scipy
    Pillow

[options.packages.find]
where = src
